<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullbame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_regster">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="#D8BA1F"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/editxr"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/register_hint1"
        android:inputType="textPersonName"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/email1"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/editxr"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:hint="@string/register_hint2"
        android:inputType="textEmailSubject"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/contra"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:background="@drawable/editxr"
        android:drawableLeft="@drawable/contra"
        android:hint="@string/register_hint3"
        android:inputType="number"
        android:textSize="22sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <EditText
        android:id="@+id/cin1"
        android:layout_width="339dp"
        android:layout_height="48dp"
         android:background="@drawable/editxr"
        android:drawableLeft="@drawable/ic_payment_black_24dp"
        android:hint="@string/register_hint4"
        android:inputType="text"
        android:textSize="22sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra"
      />

    <EditText
        android:id="@+id/password1"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:background="@drawable/editxr"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/register_hint5"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cin1"
         />

    <EditText
        android:id="@+id/password2"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:background="@drawable/editxr"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/register_hint6"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
     />

    <Button
        android:id="@+id/seregester"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="42dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/btn_seconnecter"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="#ffffff "
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="alredy Rgester ? logine her"
        android:textColorLink="#000E0D0D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seregester" />


</androidx.constraintlayout.widget.ConstraintLayout>